made a few changes to media queries to fix content overflow

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -55,10 +55,6 @@ body {
   overflow: hidden;
 
 }
-/* Makes the text bounce on hover */
-.nav a:hover {
-  padding-top: 5px;
-}
 
 /* Add color and style to text */
 h1 {
@@ -249,16 +245,19 @@ input, textarea {
   margin: 3px 0;
   }
 
+
 /* Background with style and positioning*/
 #reservation-background {
   background: rgba(0, 0, 0, .65) url('../images/reservation-background.jpg') no-repeat center;
   background-blend-mode: darken;
-  height: 900px;
-  width: 100%;
+  height: 720px;
   background-size: cover;
   color: green;
   padding-left: 2%;
-  padding-top: 2%;
+  padding-top: 1%;
+  padding-bottom: 1%;
+  text-align: left;
+  overflow:hidden;
 
 }
 
@@ -304,6 +303,11 @@ footer>p {
   color: green;
 
 }
+¨
+.box {
+  padding-left: 10%;
+
+}
 
 /* Media Queries*/
 
@@ -326,6 +330,11 @@ footer>p {
   hr {
       display: none;
   }
+
+  .nav-right {
+    margin-right: 25%;
+  }
+
 }
 
 /* for larger to medium screens size from 882px wide and down*/
@@ -338,6 +347,34 @@ footer>p {
   .welcome {
     padding: 10px 10px; 
     font-size: smaller;
+}
+
+.nav-right {
+  margin-right: 130px;
+}
+
+
+}
+
+/* for larger to medium screens size from 600px wide and down*/
+@media screen and (max-width: 600px) {
+
+  #logo {
+    margin-right: auto;
+  }
+
+  .welcome {
+    padding: 10px 10px; 
+    font-size: smaller;
+}
+
+.nav-right {
+  font-size: smaller;
+  margin: auto;
+}
+
+#backtohome {
+  padding-right: 175px;
 }
 
 }
